FrontEnd without interactive

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Loja virtual</title>
+    <title>Mini Loja Virtual</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
+
 <body>
-   <header>
+    <header>
         <h2>Pizzaria melhor Sabor</h2>
         <h3>A melhor pizzaria local.</h3>
 
@@ -21,15 +22,45 @@
                 <li><a class="Link-header" href="#">Endereço</a></li>
             </ul>
         </nav>
-   </header>
+    </header>
 
-   <main>
-    <section class="section-1">
-        <h2>Bem barato Promoções</h2>
-        <p>De Qua à Sex Pizzas por R$19,99</p>
-        <p>Aproveite essa Oferta Especial</p>
-    </section>
+    <main>
+        <section class="section-1">
+            <h2>Bem barato Promoções</h2>
+            <div>
+                <p>De Qua à Sex Pizzas por R$19,99</p>
+                <p>Aproveite essa Oferta Especial</p>
+            </div>
+        </section>
+        <section class="section-2">
+            <div class="grid">
+                <div class="sub-grid">
+                    <h2>Pizza de calabreza</h2>
+                    <img src="./imgs/PizzaCalabresa.png" alt="Pizza de calabreza">
+                    <p>R$ 25,90</p>
+                    <button class="btn-action">Pedir Pizza</button>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="sub-grid">
+                    <h2>Pizza de Portuguesa</h2>
+                    <img src="./imgs/PizzaPortuguesa.png" alt="Pizza de Portuguesa">
+                    <p>R$ 23,90</p>
+                    <button class="btn-action">Pedir Pizza</button>
+                </div>
+            </div>
+            <div class="grid">
+                <div class="sub-grid">
+                    <h2>Pizza de Queijo</h2>
+                    <img src="./imgs/PizzaQueijo.png" alt="Pizza de Queijo">
+                    <p>R$ 27,90</p>
+                    <button class="btn-action">Pedir Pizza</button>
+                </div>
+            </div>
+        </section>
 
-   </main>
+    </main>
+    <script src="index.js"></script>
 </body>
+
 </html>
